--- a/Src/Secondhand.Domain/Secondhand.Domain.csproj
+++ b/Src/Secondhand.Domain/Secondhand.Domain.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Item.cs">
+      <DependentUpon>SecondhandModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\SecondhandModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -63,6 +66,9 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>SecondhandModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Model\User.cs">
+      <DependentUpon>SecondhandModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IItemRepository.cs" />
