--- a/Src/SecondhandTrade/Secondhand.Web.csproj
+++ b/Src/SecondhandTrade/Secondhand.Web.csproj
@@ -189,6 +189,8 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Detail\" />
+    <Folder Include="Views\Items\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
