Many things implemented in Application, Documentation extended, Some new files were added

--- a/Src/Secondhand.Domain/Secondhand.Domain.csproj
+++ b/Src/Secondhand.Domain/Secondhand.Domain.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\ISecondhandContext.cs" />
     <Compile Include="Model\Item.cs">
       <DependentUpon>SecondhandModel.tt</DependentUpon>
     </Compile>
