--- a/Src/SecondhandTrade/Web.config
+++ b/Src/SecondhandTrade/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="SecondhandModelContainer" connectionString="metadata=res://*/Model.SecondhandModel.csdl|res://*/Model.SecondhandModel.ssdl|res://*/Model.SecondhandModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PANDABEAR;initial catalog=SecondhandDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SecondhandModelContainer" connectionString="metadata=res://*/Model.SecondhandModel.csdl|res://*/Model.SecondhandModel.ssdl|res://*/Model.SecondhandModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-O3A4U28;initial catalog=SecondhandDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
